--- a/core/templates/acessories/aside-menu.html
+++ b/core/templates/acessories/aside-menu.html
@@ -20,7 +20,7 @@
                 </a>
             </div>
             <div class="last-group">
-                <a class="aside-nav-box" href="{% url 'profile' %}">
+                <a class="aside-nav-box" href="{% url 'profile' id=user.id %}">
                     <i class="fa-solid fa-user"></i>
                 </a>
             </div>
