Refatoração Front Agenda

--- a/core/templates/acessories/aside-menu.html
+++ b/core/templates/acessories/aside-menu.html
@@ -15,7 +15,7 @@
                 <a class="aside-nav-box" href="{% url 'group' %}">
                     <i class="fa-solid fa-people-group"></i>
                 </a>
-                <a class="aside-nav-box" href="#">
+                <a class="aside-nav-box" href="{% url 'agenda_view' %}">
                     <i class="fa-solid fa-calendar"></i>
                 </a>
             </div>
