--- a/core/static/style/style.css
+++ b/core/static/style/style.css
@@ -705,6 +705,7 @@ aside{
     color: #909090;
     margin-top: 25px;
 }
+
 #chat-peoples{
     background-color: var(--white);
     box-shadow: 0px 8px 27px -13px rgba(0,0,0,0.1);
@@ -983,6 +984,166 @@ aside{
     }
 }
 
+/* EVENT STYLE */
+#event-calendar{
+    background-color: var(--white);
+    padding: 30px;
+    border-radius: 25px;
+    box-shadow: 0px 8px 27px -13px rgba(0,0,0,0.1);
+
+    & h3{
+        font-size: 1.3em;
+        font-weight: 400;
+        color: var(--gray);
+        margin: 0;
+        padding: 0;
+    }
+
+    & .calendar-container {
+        background: white;
+        border-radius: 8px;
+        padding: 40px 0;
+        width: 100%;
+
+        & .calendar-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 15px;
+
+            & h2{
+                margin: 0;
+            }
+
+            & button{
+                background-color: #fff;
+                border: none;
+                outline: none;
+                font-size: 1.8em;
+                color: var(--light-blue);
+                font-weight: bolder;
+            }
+        }
+
+        & .calendar-grid {
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            gap: 5px;
+
+            & .calendar-day {
+                background: var(--light-silver);
+                padding: 10px;
+                text-align: center;
+                border-radius: 4px;
+                cursor: pointer;
+            }
+
+            & .calendar-day:hover {
+                background: #778DA9;
+                color: #fff;
+            }
+
+            & .current-day {
+                background-color: var(--lightest-blue);
+                font-weight: bold;
+                color: #fff;
+            }
+
+            & .selected-day {
+                background-color: var(--light-blue);
+                color: white;
+            }
+        }
+    }
+    & .add-new-event{
+        width: 100%;
+        text-align: center;
+        background-color: #fff;
+        border: none;
+        outline: none;
+        color: var(--gray);
+
+        & i {
+            color: var(--light-blue);
+            margin-right: 15px;
+        }
+    }
+}
+
+#events-list{
+    background-color: var(--white);
+    box-shadow: 0px 8px 27px -13px rgba(0, 0, 0, 0.1);
+    padding: 0;
+    border-radius: 25px;
+    min-height: 550px;
+    max-height: 550px;
+    display: flex;
+    flex-direction: column;
+
+    & .header{
+        background-color: var(--light-blue);
+        width: 100%;
+        border-radius: 25px 25px 0 0;
+        padding: 15px 30px;
+        margin-bottom: 15px;
+        color: var(--white);
+        text-align: center;
+
+        & h4{
+            margin: 0;
+            padding: 0;
+        }
+    }
+
+    .events{
+        & .event{
+            padding: 10px 25px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid var(--silver);
+
+            & p{
+                margin: 0;
+                padding: 0;
+                color: var(--gray);
+            }
+            
+            & .event-title{
+                font-weight: 500;
+                color: var(--black);
+            }
+
+            & button{
+                background-color: #fff;
+                border: none;
+                outline: none;
+                font-size: 1.3em;
+                margin-right: 20px;
+            }
+
+            & .exclude-btn{
+                color: var(--red);
+                margin-right: 0;
+            }
+        }
+    }
+}
+
+.selected-user {
+    display: inline-block;
+    background-color: #dee2e6;
+    border-radius: 20px;
+    padding: 5px 10px;
+    margin: 5px;
+    font-size: 14px;
+}
+.selected-user .remove-user {
+    margin-left: 10px;
+    color: red;
+    cursor: pointer;
+}
+
 #group-list{
     background-color: var(--white);
     border-radius: 25px;
@@ -1076,6 +1237,8 @@ aside{
     transform: translate(-50%, -50%);
     transition: 0.5s;
     z-index: 99;
+    max-height: 700px;
+    overflow-y: scroll;
 
     & .content{
         padding: 0 30px;
