--- a/core/templates/acessories/aside-menu.html
+++ b/core/templates/acessories/aside-menu.html
@@ -6,9 +6,9 @@
         </a>
         <div class="content">
             <div class="first-group">
-                <div id="notification-box" class="aside-nav-box">
+                <!-- <div id="notification-box" class="aside-nav-box">
                     <i class="fa-solid fa-bell"></i>
-                </div>
+                </div> -->
                 <a class="aside-nav-box" href="{% url 'chat' %}">
                     <i class="fa-solid fa-comment-dots"></i>
                 </a>
