--- a/core/templates/profile.html
+++ b/core/templates/profile.html
@@ -27,7 +27,7 @@
                         <h4><b>Feed</b></h4>
                         <p>Veja publicações relevantes de {{ user.first_name }}</p>
                     </div>
-                    <div id="ordenator-list">
+                    <!-- <div id="ordenator-list">
                         <form>
                             <span>Classificar por</span>
                             <select name="ordenator" id="ordenator">
@@ -35,7 +35,7 @@
                                 <option value="most-recent" selected>Mais Recentes</option>
                             </select>
                         </form>
-                    </div>
+                    </div> -->
                 </section>
             </div>
         </div>
@@ -76,7 +76,7 @@
                     </div>
                 {% endif %}
             </div>
-            <hr>
+            <!-- <hr>
             <div id="suggest-header">
                 <h3>Sugestão de Grupos Públicos</h3>
                 <i class="fa-solid fa-pen-to-square"></i>
@@ -111,7 +111,7 @@
                     </div>
                     <i class="fa-solid fa-user-plus"></i>
                 </div>
-            </div>
+            </div> -->
         </section>
         </div>
     </div>
