--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -15,7 +15,7 @@
             <div class="col-8">
                 <h2>{{ organization.nome }}</h2>
             </div>
-            <div class="col">
+            <!-- <div class="col">
                 <form id="search-form">
                     <input name="search" id="search" type="text" placeholder="Pesquisar no WorkConnect">
                     <select name="search-target" id="search-target">
@@ -25,7 +25,7 @@
                     </select>
                     <button type="submit"></button>
                 </form>
-            </div>
+            </div> -->
         </div>
     {% block content %}
     {% endblock %}
