--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row">
         <div class="col-lg-8 col-md-12 col-sm-12">
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col">
                     <section id="updates-notification">
                         <i class="fa-solid fa-newspaper"></i>
@@ -13,7 +13,7 @@
                         </div>
                     </section>
                 </div>
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col">
                     <section id="feed-ordenator">
@@ -21,7 +21,7 @@
                             <h4><b>Feed</b></h4>
                             <p>Veja publicações relevantes da sua organização</p>
                         </div>
-                        <div id="ordenator-list">
+                        <!-- <div id="ordenator-list">
                             <form>
                                 <span>Classificar por</span>
                                 <select name="ordenator" id="ordenator">
@@ -29,7 +29,7 @@
                                     <option value="most-recent">Mais Recentes</option>
                                 </select>
                             </form>
-                        </div>
+                        </div> -->
                     </section>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                             </div>
                         </div>
                     </div>
-                    <h3>Sugestão de Pessoas</h3>
+                    <!-- <h3>Sugestão de Pessoas</h3>
                     <div id="people-suggestions">
                         {% for user_u in users %}
                         <div class="people-suggest">
@@ -88,7 +88,7 @@
                             <i class="fa-solid fa-user-plus"></i>
                         </div>
                         {% endfor %}
-                    </div>
+                    </div> -->
                 </section>
             </div>
         </div>
