--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -66,7 +66,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <h3>Sugestão de Pessoas</h3>
+                    <h3>Sugestão de Pessoas</h3>
                     <div id="people-suggestions">
                         {% for user_u in users %}
                         <div class="people-suggest">
@@ -82,13 +82,13 @@
                                 {% endif %}
                                 <div class="profile-user-title">
                                     <span><b><a href="{% url 'profile' id=user_u.id %}">{{ user_u.get_full_name}}</a></b></span>
-                                    <span class="post-role">Project Management</span>
+                                    <!-- <span class="post-role">Project Management</span> -->
                                 </div>
                             </div>
-                            <i class="fa-solid fa-user-plus"></i>
+                            <!-- <i class="fa-solid fa-user-plus"></i> -->
                         </div>
                         {% endfor %}
-                    </div> -->
+                    </div>
                 </section>
             </div>
         </div>
