--- a/core/templates/profile.html
+++ b/core/templates/profile.html
@@ -71,7 +71,7 @@
 
                 {% if request.user == usuario %}
                     <div class="actions-btn">
-                        <button>Editar Perfil</button>
+                        <!-- <button>Editar Perfil</button> -->
                         <button id="logout-btn">Sair</button>
                     </div>
                 {% endif %}
