Ajustes finais detalhes elementos front pt 2

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -46,9 +46,9 @@
         <div class="col">
             <div class="row">
                 <section id="aside-content">
-                    <div id="suggest-header">
+                    <!-- <div id="suggest-header">
                         <h3>Sugestão de Grupos Públicos</h3>
-                        <!-- <i class="fa-solid fa-pen-to-square"></i> -->
+                        <i class="fa-solid fa-pen-to-square"></i>
                     </div>
                     <div id="group-suggestions">
                         <div class="group-suggest">
@@ -65,7 +65,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <h3>Sugestão de Pessoas</h3>
                     <div id="people-suggestions">
                         {% for user_u in users %}
